[package]
name = "stratum-counter"
version = "0.1.0"
edition = "2021"
authors = ["Gary Krause"]
description = "A Unix-style tool for monitoring TCP connections in Docker containers"
license = "MIT"
repository = "https://github.com/average-gary/stratum-counter"
readme = "README.md"
keywords = ["docker", "monitoring", "tcp", "network", "stratum"]
categories = ["command-line-utilities", "monitoring", "network-programming"]

[dependencies]
netstat2 = "0.11"
sysinfo = "0.30.5"
bollard = "0.15"
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opentelemetry-otlp = { version = "0.29", features = ["http-proto", "metrics"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio", "metrics"] }
opentelemetry = "0.29.1"
chrono = "0.4"

[[bin]]
name = "stratum-counter"
path = "src/main.rs"
doc = false

[build-dependencies]
chrono = "0.4"
sha2 = "0.10"
